--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/home/maheen/CQA_Workspace/CQA/src/org/nii/cqa/parser/JavaCup/java-cup-11a.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
