--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/home/maheen/CQA_Workspace/CQA/src/org/nii/cqa/parser/JavaCup/java-cup-11a.jar"/>
+	<classpathentry kind="lib" path="lib/java_cup.jar"/>
+	<classpathentry kind="lib" path="lib/JFlex.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
